--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "twilio": "^5.3.4"
   }
 }
